-- Please create the database first, otherwise Flyway won't get over DataSource initialization.

CREATE TABLE blacklisted_token
(
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at  TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    created_by  BIGINT,
    updated_at  TIMESTAMP WITHOUT TIME ZONE,
    updated_by  BIGINT,
    token       VARCHAR(255)                            NOT NULL,
    token_type  VARCHAR(255),
    expiry_date TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    CONSTRAINT pk_blacklistedtoken PRIMARY KEY (id)
);

CREATE TABLE cart_items
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    created_by BIGINT,
    updated_at TIMESTAMP WITHOUT TIME ZONE,
    updated_by BIGINT,
    cart_id    BIGINT                                  NOT NULL,
    sku_id     BIGINT                                  NOT NULL,
    quantity   INTEGER                                 NOT NULL,
    CONSTRAINT pk_cart_items PRIMARY KEY (id)
);

CREATE TABLE carts
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    created_by BIGINT,
    updated_at TIMESTAMP WITHOUT TIME ZONE,
    updated_by BIGINT,
    token      VARCHAR(255)                            NOT NULL,
    CONSTRAINT pk_carts PRIMARY KEY (id)
);

CREATE TABLE categories
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    created_by BIGINT,
    updated_at TIMESTAMP WITHOUT TIME ZONE,
    updated_by BIGINT,
    name       VARCHAR(255)                            NOT NULL,
    slug       VARCHAR(255)                            NOT NULL,
    CONSTRAINT pk_categories PRIMARY KEY (id)
);

CREATE TABLE order_histories
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    created_by BIGINT,
    updated_at TIMESTAMP WITHOUT TIME ZONE,
    updated_by BIGINT,
    order_id   BIGINT                                  NOT NULL,
    old_status VARCHAR(255),
    new_status VARCHAR(255),
    note       TEXT,
    CONSTRAINT pk_order_histories PRIMARY KEY (id)
);

CREATE TABLE order_items
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    created_by BIGINT,
    updated_at TIMESTAMP WITHOUT TIME ZONE,
    updated_by BIGINT,
    order_id   BIGINT                                  NOT NULL,
    sku_id     BIGINT                                  NOT NULL,
    quantity   INTEGER                                 NOT NULL,
    unit_price DECIMAL                                 NOT NULL,
    CONSTRAINT pk_order_items PRIMARY KEY (id)
);

CREATE TABLE orders
(
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at     TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    created_by     BIGINT,
    updated_at     TIMESTAMP WITHOUT TIME ZONE,
    updated_by     BIGINT,
    tracking_token VARCHAR(255)                            NOT NULL,
    status         VARCHAR(255)                            NOT NULL,
    payment_method VARCHAR(255),
    total_amount   DECIMAL                                 NOT NULL,
    customer_name  VARCHAR(255),
    customer_phone VARCHAR(255),
    customer_email VARCHAR(255),
    shipping_addr  TEXT,
    note           TEXT,
    CONSTRAINT pk_orders PRIMARY KEY (id)
);

CREATE TABLE product_images
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    created_by BIGINT,
    updated_at TIMESTAMP WITHOUT TIME ZONE,
    updated_by BIGINT,
    product_id BIGINT                                  NOT NULL,
    image_url  VARCHAR(255)                            NOT NULL,
    position   INTEGER                                 NOT NULL,
    is_primary BOOLEAN                                 NOT NULL,
    CONSTRAINT pk_product_images PRIMARY KEY (id)
);

CREATE TABLE products
(
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at  TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    created_by  BIGINT,
    updated_at  TIMESTAMP WITHOUT TIME ZONE,
    updated_by  BIGINT,
    category_id BIGINT                                  NOT NULL,
    name        VARCHAR(255)                            NOT NULL,
    slug        VARCHAR(255)                            NOT NULL,
    description TEXT,
    base_price  DECIMAL                                 NOT NULL,
    CONSTRAINT pk_products PRIMARY KEY (id)
);

CREATE TABLE reservations
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    created_by BIGINT,
    updated_at TIMESTAMP WITHOUT TIME ZONE,
    updated_by BIGINT,
    sku_id     BIGINT                                  NOT NULL,
    cart_id    BIGINT                                  NOT NULL,
    quantity   INTEGER                                 NOT NULL,
    status     VARCHAR(255)                            NOT NULL,
    expires_at TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    CONSTRAINT pk_reservations PRIMARY KEY (id)
);

CREATE TABLE skus
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    created_by BIGINT,
    updated_at TIMESTAMP WITHOUT TIME ZONE,
    updated_by BIGINT,
    product_id BIGINT                                  NOT NULL,
    size       VARCHAR(255),
    color      VARCHAR(255),
    price      DECIMAL                                 NOT NULL,
    stock_qty  INTEGER                                 NOT NULL,
    CONSTRAINT pk_skus PRIMARY KEY (id)
);

CREATE TABLE sku_codes
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    created_by BIGINT,
    updated_at TIMESTAMP WITHOUT TIME ZONE,
    updated_by BIGINT,
    sku_id     BIGINT                                  NOT NULL,
    code       VARCHAR(255)                            NOT NULL,
    is_primary BOOLEAN                                 NOT NULL DEFAULT FALSE,
    CONSTRAINT pk_sku_codes PRIMARY KEY (id),
    CONSTRAINT uc_sku_codes_code UNIQUE (code),
    CONSTRAINT fk_sku_codes_sku FOREIGN KEY (sku_id) REFERENCES skus (id) ON DELETE CASCADE
);

CREATE TABLE users
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    created_by BIGINT,
    updated_at TIMESTAMP WITHOUT TIME ZONE,
    updated_by BIGINT,
    full_name  VARCHAR(100)                            NOT NULL,
    email      VARCHAR(100)                            NOT NULL,
    password   VARCHAR(255)                            NOT NULL,
    role       VARCHAR(20)                             NOT NULL,
    is_active  BOOLEAN                                 NOT NULL,
    CONSTRAINT pk_users PRIMARY KEY (id)
);

CREATE TABLE pending_registrations
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    email      VARCHAR(100)                            NOT NULL,
    full_name  VARCHAR(100)                            NOT NULL,
    password   VARCHAR(255)                            NOT NULL,
    otp_code   VARCHAR(6)                              NOT NULL,
    otp_expiry TIMESTAMP WITH TIME ZONE                NOT NULL,
    created_at TIMESTAMP WITH TIME ZONE                NOT NULL,
    attempts   INTEGER                                 NOT NULL DEFAULT 0,
    CONSTRAINT pk_pending_registrations PRIMARY KEY (id)
);

ALTER TABLE cart_items
    ADD CONSTRAINT uc_185d0b02611514335c245664b UNIQUE (cart_id, sku_id);

ALTER TABLE blacklisted_token
    ADD CONSTRAINT uc_blacklistedtoken_token UNIQUE (token);

ALTER TABLE carts
    ADD CONSTRAINT uc_carts_token UNIQUE (token);

ALTER TABLE categories
    ADD CONSTRAINT uc_categories_slug UNIQUE (slug);

ALTER TABLE orders
    ADD CONSTRAINT uc_orders_trackingtoken UNIQUE (tracking_token);

ALTER TABLE products
    ADD CONSTRAINT uc_products_slug UNIQUE (slug);

ALTER TABLE users
    ADD CONSTRAINT uc_users_email UNIQUE (email);

CREATE INDEX idx_email ON users (email);

ALTER TABLE cart_items
    ADD CONSTRAINT FK_CART_ITEMS_ON_CART FOREIGN KEY (cart_id) REFERENCES carts (id);

ALTER TABLE cart_items
    ADD CONSTRAINT FK_CART_ITEMS_ON_SKU FOREIGN KEY (sku_id) REFERENCES skus (id);

ALTER TABLE order_histories
    ADD CONSTRAINT FK_ORDER_HISTORIES_ON_ORDER FOREIGN KEY (order_id) REFERENCES orders (id);

ALTER TABLE order_items
    ADD CONSTRAINT FK_ORDER_ITEMS_ON_ORDER FOREIGN KEY (order_id) REFERENCES orders (id);

ALTER TABLE order_items
    ADD CONSTRAINT FK_ORDER_ITEMS_ON_SKU FOREIGN KEY (sku_id) REFERENCES skus (id);

ALTER TABLE products
    ADD CONSTRAINT FK_PRODUCTS_ON_CATEGORY FOREIGN KEY (category_id) REFERENCES categories (id);

ALTER TABLE product_images
    ADD CONSTRAINT FK_PRODUCT_IMAGES_ON_PRODUCT FOREIGN KEY (product_id) REFERENCES products (id);

CREATE INDEX idx_product_images_product ON product_images (product_id);

ALTER TABLE reservations
    ADD CONSTRAINT FK_RESERVATIONS_ON_CART FOREIGN KEY (cart_id) REFERENCES carts (id);

ALTER TABLE reservations
    ADD CONSTRAINT FK_RESERVATIONS_ON_SKU FOREIGN KEY (sku_id) REFERENCES skus (id);

ALTER TABLE skus
    ADD CONSTRAINT FK_SKUS_ON_PRODUCT FOREIGN KEY (product_id) REFERENCES products (id);

ALTER TABLE pending_registrations
    ADD CONSTRAINT uc_pending_registrations_email UNIQUE (email);

CREATE INDEX idx_pending_registrations_email
    ON pending_registrations (email);

CREATE INDEX idx_sku_codes_sku ON sku_codes (sku_id);

CREATE INDEX idx_sku_codes_code ON sku_codes (code);